# noir

./: .gas-snapshot  .gitignore  EXAMPLE_WORKFLOW.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  foundry.toml  quickstart.sh  sample_accounts.txt
.github/workflows/: ci.yml
circuits/airdrop/: Nargo.toml
circuits/airdrop/src/: main.nr
cli/airdrop-cli/: Cargo.toml  rustfmt.toml
cli/airdrop-cli/.cargo/: config.toml
cli/airdrop-cli/src/: build_tree.rs  claim.rs  common.rs  lib.rs  main.rs  prove.rs
contracts/: Airdrop.sol  Airdrop.t.sol
scripts/: DeployAirdrop.s.sol
