[package]
name = "airdrop-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
sha3 = "0.10"
alloy-primitives = "0.7"
k256 = { version = "0.13", features = ["ecdsa"] }

[[bin]]
name = "build-tree"
path = "src/build_tree.rs"

[[bin]]
name = "claim"
path = "src/claim.rs"

[[bin]]
name = "prove"
path = "src/prove.rs"